2004-05-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* regexxer.desktop (Name): Use _Name to make it translatable, and
	change the string to "regexxer Search Tool".  Idea from Dag Wieers.

2004-05-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc: Mark all const_cast<> work-arounds for the
	Gtk::TextIter API bug with // XXX comments.
	(FileBuffer::get_match_index): Get rid of libstdc++-v2 work-around.

	* src/filebuffer.h (FileBuffer): Get rid of the friend declarations
	that were added to work around a GCC 2.95 deficiency.
	* src/filetree.h (FileTree): ditto
	* src/mainwindow.h (MainWindow): ditto.

2004-05-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (install-schemas): Simplify.  Since regexxer.schemas
	is now a generated file it is always placed in the build directory.
	(uninstall-schemas): Likewise.  Also add $(schemas_DATA) to the
	prerequisites so that the rule will work with a clean tree.  Having
	make uninstall generate files is a little awkward, but I cannot see
	a way around that :/

2004-05-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (CLEANFILES): List build-time generated files
	$(desktop_DATA) and $(schemas_DATA).
	(DISTCLEANFILES): List configure-time generated files
	intltool-extract, intltool-merge and intltool-update.

2004-05-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Execute glib-gettextize and intltoolize.

	* configure.ac: Call AC_PROG_INTLTOOL().  Assign ALL_LINGUAS and
	GETTEXT_PACKAGE, and do an AC_SUBST() of the latter.
	(AM_GNU_GETTEXT): Use AM_GLIB_GNU_GETTEXT() instead.

	* Makefile.am (dist_desktop_DATA): Remove the dist_ prefix,
	introduce desktop_in_files, and add the @INTLTOOL_DESKTOP_RULE@
	substitution in order to make regexxer intltool-aware.
	(dist_schema_DATA): Likewise for the GConf schemas file.
	(dist_noinst_SCRIPTS): Add intltool-extract.in, intltool-merge.in
	and intltool-update.in.

	* regexxer.desktop: Rename to regexxer.desktop.in, use _Comment